--- a/Tarea.html
+++ b/Tarea.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Ejemplo de tabla</title>
+<title>Andres Gonzalez - 30.343.149 - T2-INF-1 - Tablas</title>
 <link href="tabla.css" rel="stylesheet" />
 </head>
 <body>
